# UASPL

./: .gitignore  LICENSE  README.md  UASPL.py  pyproject.toml  requirements.txt  setup.py
herramientas/: ctkui.py  escaneoui.py  funciones.py  idioma.py  printlet.py  statusui.py  ufwui.py
idiomas/: english.py  espanol.py
src/: UASPL.desktop  pyproject.toml
src/uaspl/: UASPL.py  setup.py  uaspl.py
src/uaspl/config/: parser.py
src/uaspl/herramientas/: avisoctk.py  confirmacion.py  ctkui.py  escaneoui.py  extensiones.py  funciones.py  gterminal.py  idioma.py  ufwui.py
src/uaspl/idiomas/: diccionario.py
src/uasplc_sh/: uasplc.sh
