[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uaspl"
version = "1.2.2"
description = "Utilidad Automatizada para la Seguridad y Protección en Linux"
authors = [{ name="KevinCrrl" }]
license = "GPL-3.0-or-later"
requires-python = ">=3.13"

[project.scripts]
uaspl = "UASPL:main"
