[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uaspl"
version = "2.0.0"
authors = [
  { name="KevinCrrl" },
]
description = "KevinCrrl Python AUR Helper"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "pyxdg>=0.26",
    "jsonschema>=4.22.0",
    "customtkinter",
]

[project.urls]
"Homepage" = "https://github.com/KevinCrrl/UASPL"
"Bug Tracker" = "https://github.com/KevinCrrl/UASPL/issues"


[project.scripts]
uaspl = "uaspl.uaspl:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["uaspl*"]
exclude = ["config", "herramientas", "idiomas"]